--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -49,12 +49,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: user.node.js
-        uses: actions/configure-page@v4
+      - name: use node.js
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
       - name: configure github pages
-        uses: action/configure-pages@v4
+        uses: actions/configure-pages@v4
         with:
           static_site_generator: next
       - run: npm install
